# snake-playground

./: .gitignore  Cargo.toml  README.md  tests.md
datagen/: Cargo.toml
datagen/src/: board.rs  generator.rs  main.rs  ruleset.rs  standard.rs
linalg/src/: lib.rs
paramoptimizer/: Cargo.toml  README.md
paramoptimizer/src/: board.rs  eval.rs  main.rs  optimize.rs  text.txt
perft-generator/: Cargo.toml
perft-generator/src/: board.rs  cartprod.rs  coordinate.rs  genmove.rs  main.rs  perft.rs  snake.rs
temporaldiff/: Cargo.toml
test_jsons/: 01.json  02.json  03.json  04.json
