[package]
name = "paramoptimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
brotli2 = "0.3.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
deepsize = "0.2.0"
pathfinding = "3.0.13"
rayon = "1.5.3"
indicatif = "0.17.0"
rmp-serde = "1.1.0"